pihole/svc.yaml
# Pi-hole requires two services — TCP (admin UI + DNS) and UDP (DNS)
# metallb.universe.tf/allow-shared-ip ensures both services share the same IP
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: "pihole"
spec:
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: default
    metallb.universe.tf/allow-shared-ip: "pihole"
spec:
  selector:
    app: pihole
  externalTrafficPolicy: Local
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  type: LoadBalancer
