pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole.mortylabs.com
  rules:
  - host: pihole.mortylabs.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-tcp
              port:
                number: 80
